@@ -156,6 +156,7 @@ CREATE TABLE users (
   name			varchar(100)	DEFAULT '' NOT NULL,
   surname		varchar(100)	DEFAULT '' NOT NULL,
   passwd		char(32)	DEFAULT '' NOT NULL,
+  url			varchar(255)	DEFAULT '' NOT NULL,
   PRIMARY KEY (userid)
 );
 
