@@ -77,7 +77,7 @@
 	if(isset($register)&&($register=="Enter"))
 	{
 		$password=md5($password);
-		$sql="select u.userid,u.alias,u.name,u.surname from users u where u.alias='$name' and u.passwd='$password'";
+		$sql="select u.userid,u.alias,u.name,u.surname,u.url from users u where u.alias='$name' and u.passwd='$password'";
 		$result=DBselect($sql);
 		if(DBnum_rows($result)==1)
 		{
@@ -85,12 +85,21 @@
 			$USER_DETAILS["alias"]=DBget_field($result,0,1);
 			$USER_DETAILS["name"]=DBget_field($result,0,2);
 			$USER_DETAILS["surname"]=DBget_field($result,0,3);
+			$USER_DETAILS["url"]=DBget_field($result,0,4);
 			$sessionid=md5(time().$password.$name.rand(0,10000000));
 			setcookie("sessionid",$sessionid,time()+3600);
 // Required !
 			$HTTP_COOKIE_VARS["sessionid"]=$sessionid;
 			$sql="insert into sessions (sessionid,userid,lastaccess) values ('$sessionid',".$USER_DETAILS["userid"].",".time().")";
 			DBexecute($sql);
+
+			if($USER_DETAILS["url"] != '')
+			{
+				echo "<HTML><HEAD>";
+        			echo "<META HTTP-EQUIV=\"Refresh\" CONTENT=\"0; URL=".$USER_DETAILS["url"]."\">";
+				echo "</HEAD></HTML>";
+				return;
+			}
 		}
 	}
 
