@@ -1,0 +1,1 @@
+alter table users add  url			varchar(255)	DEFAULT '' NOT NULL;
