@@ -1,5 +1,7 @@
 Changes for 1.1alpha1:
 
+ - added support for configurable after-login screen (Alexei)
+ - added column users.url (Alexei)
  - email routines moved to email.c (Alexei)
  - fixed hosts.php. Changed <? to <?php. (Alexei)
  - fixed number of trapped items in STATUS OF ZABBIX. Thanks to Igor. (Alexei)
